<resources>
    <string name="app_name">moodly</string>
    <string name="moodly">moodly</string>
    <string name="already_hav">Already have an account? <font color='#FFD261'>Log in</font></string>
    <string name="display_name">Display Name</string>
    <string name="email_addre">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_pas">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="some_id">Question Mark</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="don_t_have_">Don\'t have an account? <font color='#FFD261'>Sign up</font></string>
    <string name="forgot_username">Forgot Username?</string>
    <string name="some_id2"><![CDATA[!!]]></string>
    <string name="enter_the_e">Enter the email address for the account you want to recover</string>
    <string name="back_to_log">Back to login</string>
    <string name="we_ve_sent_">We\'ve sent you a code</string>
    <string name="enter_in_th">Enter in the five-digit code we sent to georgedoe297@gmail.com</string>
    <string name="your_identi">Your identity has been verified</string>
    <string name="please_set_">Please set your new password</string>
    <string name="new_passwor">New Password</string>
    <string name="confirm_new">Confirm New Password</string>
    <string name="please_set_2">Please set your new username</string>
    <string name="new_username">New Username</string>
    <string name="oh_no_">Oh no!</string>
    <string name="it_seems_yo">It seems you aren\'t quite 18 years old yet.</string>
    <string name="this_accoun">This account has been locked. If this is an error, please reach out to an administrator.</string>
    <string name="a_verificat">A verification code was sent to georgedoe296@gmail.com</string>
    <string name="verificatio">Verification code</string>
    <string name="resend_code">Resend code</string>
    <string name="customize_y">Customize your <font color='#FFD261'>moodly </font>profile!</string>
    <string name="add_a_profi">Add a profile picture</string>
    <string name="your_friend">Your friends love everything about you.</string>
    <string name="step_2_of_4">Step 2 of 4</string>
    <string name="when_is_you">When is your birthday?</string>
    <string name="you_must_be">You must be 18 years or older to proceed.</string>
    <string name="label_text">Date</string>
    <string name="supporting_">MM/DD/YYYY</string>
    <string name="step_1_of_4">Step 1 of 4</string>
    <string name="welcome_to_">Welcome to <font color='#FFD261'>moodly! </font> Let\'s get started.</string>
    <string name="set_up_your">Set up your Triggers</string>
    <string name="triggers_ar">Triggers are identifiable causes for your mood at a certain time! They could be anything, from a nostalgic scent, to the sight of a scary animal (who, me?)</string>
    <string name="add_up_to_t">Add up to three to begin. You can update this list at any time.</string>
    <string name="button">Next</string>
    <string name="step_3_of_4">Step 3 of 4</string>
    <string name="almost_ther">Almost there!</string>
    <string name="toggle_mood">Toggle <font color='#FFD261'>moodle</font> Permissions</string>
    <string name="you_can_upd">You can update these in the Profile Settings. When posting a moodle, you will be asked about this anyway.</string>
    <string name="show_locati">Show location (by default)</string>
    <string name="show_trigge">Show triggers (by default)</string>
    <string name="show_graphi">Show graphic content</string>
    <string name="you_won_t_b">You won\'t be warned of potentially NSFW content on your feed.</string>
    <string name="step_4_of_4">Step 4 of 4</string>
    <string name="you_re_all_">You\'re all set!</string>
    <string name="following">Following</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="placeholder_time">3:58PM</string>
    <string name="placeholder_date">Wednesday, July 21</string>
    <string name="placeholder_username_emotion">Julian is feeling happy</string>
    <string name="placeholder_situation">crumbl cookies</string>


    <string name="for_you">For you</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="followers">Followers</string>
    <string name="search_text">Search for users</string>
    <string name="following_text_feed">Following</string>
    <string name="for_you_text_feed">For you</string>
    <string name="filter_mood_events">Filter Mood Events</string>
    <string name="search_mood_text">Search for words</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pfp_desc">Profile Picture\n</string>
    <string name="followers_text">followers</string>
    <string name="following_text">following</string>
    <string name="add_filter_text">add a filter</string>
    <string name="edit_profile_text">Edit Profile</string>
</resources>