<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/moodly"
        android:layout_width="293dp"
        android:layout_height="96dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="148dp"
        android:gravity="center_horizontal|top"
        android:text="@string/moodly"
        android:textAppearance="@style/moodly"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/form_userna"
        android:layout_width="364dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/form_userna"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="274dp">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal|top"
            android:text="@string/username"
            android:textAppearance="@style/username" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form_passwo"
        android:layout_width="364dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/form_passwo"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_userna">

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal|top"
            android:text="@string/password"
            android:textAppearance="@style/password" />
    </RelativeLayout>


    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="98dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="393dp" />

    <TextView
        android:id="@+id/forgot_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal|top"
        android:text="@string/forgot_username"
        android:textAppearance="@style/forgot_pass"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_userna" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="364dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_logi"
        android:clipToOutline="true"
        android:gravity="center"
        android:text="Sign Up"
        android:textAppearance="@style/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="420dp" />

    <TextView
        android:id="@+id/don_t_have_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/don_t_have_"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="493dp" />

    <TextView
        android:id="@+id/some_id2"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/some_id2"
        android:textAppearance="@style/some_id2"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="579dp" />

    <ImageView
        android:id="@+id/untitled_32"
        android:layout_width="312dp"
        android:layout_height="311dp"
        android:background="@drawable/own_picture_signup"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="572dp" />


</androidx.constraintlayout.widget.ConstraintLayout>