<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileActivity">


    <!-- Auto layout, variables, and unit scale are not yet supported NOTE: PUT CONSTRAINTS-->
    <RelativeLayout
        android:id="@+id/profile"
        android:layout_width="412dp"
        android:layout_height="917dp"
        android:background="#FFFFFF"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/username"
            android:layout_width="116.94dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="180dp"
            android:gravity="center_horizontal|top"
            tools:text="@string/username"
            android:textAppearance="@style/username" />

        <TextView
            android:id="@+id/moodly"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="13dp"
            android:gravity="center_horizontal|top"
            android:text="@string/moodly"
            android:textAppearance="@style/moodly" />


        <TextView
            android:id="@+id/follower_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/followers"
            android:layout_marginBottom="131dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="133dp"
            android:layout_height="25dp"
            android:layout_marginVertical="150dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/username"
            android:gravity="center_horizontal|top"
            android:text="@string/followers"
            android:textAppearance="@style/followers" />

        <TextView
            android:id="@+id/following_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/following"
            android:layout_width="148dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="150dp"
            android:gravity="center_horizontal|top"
            android:text="@string/following"
            android:textAppearance="@style/following" />

        <TextView
            android:id="@+id/name"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="146.16dp"
            android:layout_marginTop="112dp"
            tools:text="@string/display_name"
            android:textAppearance="@style/name" />

        <Button
            android:id="@+id/edit_profil_button"
            android:layout_width="115dp"
            android:layout_height="34dp"
            android:layout_below="@+id/username"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="21dp"

            android:layout_marginLeft="21dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="276dp"
            android:background="#49311E"
            android:gravity="center_horizontal|top"
            android:text="@string/edit_profile"
            android:textAppearance="@style/edit_profil_button"
            android:onClick="goToEditProfile"/>
`
        <ListView
            android:id="@+id/profile_array"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/edit_profil_button"
            android:layout_marginTop="42dp"
            android:layout_weight="1" />


    </RelativeLayout>
    <include
        android:id="@+id/navbarContainer"
        layout="@layout/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>