<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/enter_the_e"
        android:layout_width="364dp"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/enter_the_e"
        android:textAppearance="@style/enter_the_e"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="285dp" />

    <RelativeLayout
        android:id="@+id/form_email_"
        android:layout_width="364dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.6"
        android:background="@drawable/form_email_"
        android:clipToOutline="true"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="369dp" >

        <TextView
            android:id="@+id/email_addre"
            android:layout_width="103dp"
            android:layout_height="19dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/email_addre"
            android:textAppearance="@style/email_addre" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_logi"
        android:layout_width="364dp"
        android:layout_height="61dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="Continue"
        android:background="@drawable/button_logi"
        android:clipToOutline="true"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="438dp" />

    <TextView
        android:id="@+id/back_to_log"
        android:layout_width="77dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/back_to_log"
        android:textAppearance="@style/back_to_log"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="507dp" />

</androidx.constraintlayout.widget.ConstraintLayout>