<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/your_identi"
        android:layout_width="364dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal|top"
        android:text="@string/your_identi"
        android:textAppearance="@style/your_identi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/please_set_"
        android:layout_width="364dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/please_set_"
        android:textAppearance="@style/please_set_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_identi" />

    <RelativeLayout
        android:id="@+id/form_passwo"
        android:layout_width="361dp"
        android:layout_height="53dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/form_passwo"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/please_set_">

        <TextView
            android:id="@+id/new_passwor"
            android:layout_width="298dp"
            android:layout_height="42dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/new_passwor"
            android:textAppearance="@style/new_passwor" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form_passwo2"
        android:layout_width="361dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/form_passwo"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_passwo">

        <TextView
            android:id="@+id/confirm_new"
            android:layout_width="266dp"
            android:layout_height="37dp"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal|top"
            android:text="@string/confirm_new"
            android:textAppearance="@style/confirm_new" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_logi"
        android:layout_width="364dp"
        android:layout_height="61dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_logi"
        android:clipToOutline="true"
        android:text="Log in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_passwo2" />


</androidx.constraintlayout.widget.ConstraintLayout>